# django-sync-model

./: README.md  pyproject.toml  run_doc_server.sh
source/: README.md  conf.py  index.rst
src/sync_model/: __about__.py  __init__.py  admin.py  apps.py  exceptions.py  models.py  tests.py  types.py  utils.py
src/sync_model/management/commands/: sync_model.py
src/sync_model/managements/commands/: sync_model.py
src/sync_model/migrations/: 0001_initial.py  0002_alter_synctask_dependencies.py  0002_synctask_source_db_synctask_target_db.py  0003_synctask_name.py  0004_stockaction_stock_number.py  0005_stockaction_sender.py  0006_stockaction_update_datetime.py  0007_broker_rawstockaction_broker.py
